BusOne02/src/objects/Benefit_Design_vod__c.object
<CustomObject>
    <description>Benefit Design represents a Benefit Design for a specific Managed Care (Payer) account. There may be multiple Benefit Designs for a particular account. Benefit Design Line is a child object of Benefit Design.</description>
    <fields>
        <fullName>Account_Name_vod__c</fullName>
        <description>The textual name of the Account accessed through a Formula field based upon the Account_vod__c relationship.  This field is leveraged by the Prescriber Level Formulary control for VMobile.</description>
        <formula>Account_vod__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account that this Benefit Design belongs to.</description>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BOT_Benefit_Design_ID__c</fullName>
        <description>It is created by BusinessOne Technologies. It is used to store BOT Formulary ID.</description>
        <label>Benefit Design ID</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BOT_Entity_ID__c</fullName>
        <description>To store BOT Entity ID. It is used for BOT internal reference.</description>
        <label>Entity ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_Formulary_Lives_Med__c</fullName>
        <description>To store medical formulary lives</description>
        <label>Formulary Lives Med</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_Formulary_Name__c</fullName>
        <description>Used to store the name of Formulary</description>
        <label>Formulary Name Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Is_BOT_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is created by BusinessOne technologies. This field is used to identify the record created by BOT or Veeva.</description>
        <label>Is BOT Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Child_Last_Modified_vod__c</fullName>
        <description>Last modification of a child related to this row of data.</description>
        <label>Child Last Modified</label>
        <summarizedField>Benefit_Design_Line_vod__c.LastModifiedDate</summarizedField>
        <summaryForeignKey>Benefit_Design_Line_vod__c.Benefit_Design_vod__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID is used only for data loading.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lives_vod__c</fullName>
        <description>Number of lives covered by this benefit design. This number displays in the formulary viewer.</description>
        <label>Total Formulary Lives</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Design_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this Benefit Design takes its formulary information from another Benefit Design, then this field points to that controlling benefit design.</description>
        <label>Parent Design</label>
        <referenceTo>Benefit_Design_vod__c</referenceTo>
        <relationshipName>Parent_Design_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payer_Id_vod__c</fullName>
        <description>The textual name of the Account&apos;s Payer Id value accessed through a Formula field based upon the Account_vod__c relationship.  This field is leveraged by the Prescriber Level Formulary control for VMobile.</description>
        <formula>Account_vod__r.Payer_Id_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payer Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_Lives_vod__c</fullName>
        <description>The percentage of lives (for this account) that are covered by this plan. Gives a relative indication of the importance of this plan within the account. Percent Lives is not a calculated field and is not kept in sync with #of lives.</description>
        <label>Percent Lives</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Primary_Benefit_Design_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, indicates this is the primary benefit design for the account.  This field is leveraged n the Prescriber Level Formulary control for VMobile.</description>
        <label>Primary Benefit Design</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_vod__c</fullName>
        <description>The value in the type field (Commercial, VA, Medicaid, etc.) is cascaded down to the Benefit Design Lines and controls what Status and Restrictions are valid. If this type field is changed, it will cascade down to the Benefit Design Lines.</description>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
                <value>
                    <fullName>PBM-Commercial</fullName>
                </value>
                <value>
                    <fullName>PBM-Medicare</fullName>
                </value>
                <value>
                    <fullName>State Medicaid</fullName>
                </value>
                <value>
                    <fullName>Tricare</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Benefit Design</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Formulary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Benefit Designs</pluralLabel>
    <recordTypes>
        <fullName>BOT_Benefit_Design</fullName>
        <active>true</active>
        <description>It is created by BusinessOne Technologies Inc and used to store BOT Formulary records.</description>
        <label>BOT_Benefit Design</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>